--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -40,7 +40,7 @@
             <path stroke-linecap="round" stroke-linejoin="round"
               d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
           </svg>
-          <span>3133402363</span>
+          <span>3125457887</span>
         </li>
         <li class="flex items-center gap-3">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#ff5500]" fill="none" viewBox="0 0 24 24"
@@ -58,7 +58,7 @@
       <h3 class="text-white font-bold uppercase tracking-wider mb-6 text-sm">Información</h3>
       <ul class="space-y-3 text-sm">
         <li><a href="/terminos" class="hover:text-[#ff5500] transition-colors">Términos y condiciones</a></li>
-        <li><a href="/envios" class="hover:text-[#ff5500] transition-colors">Garantía</a></li>
+        <li><a href="/garantia" class="hover:text-[#ff5500] transition-colors">Garantía</a></li>
       </ul>
     </div>
 
